; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_mq-mgr.c_seaf_mq_manager_init.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_mq-mgr.c_seaf_mq_manager_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@SEAFILE_NOTIFY_CHAN = common dso_local global i32 0, align 4
@json_decref = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @seaf_mq_manager_init(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @SEAFILE_NOTIFY_CHAN, align 4
  %9 = call i32 @g_strdup(i32 %8)
  %10 = load i64, i64* @json_decref, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @g_async_queue_new_full(i32 %11)
  %13 = call i32 @g_hash_table_replace(i32 %7, i32 %9, i32 %12)
  ret void
}

declare dso_local i32 @g_hash_table_replace(i32, i32, i32) #1

declare dso_local i32 @g_strdup(i32) #1

declare dso_local i32 @g_async_queue_new_full(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
